[package]
name = "leptos_config"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "Configuration for the Leptos web framework."
readme = "../README.md"
version = { workspace = true }
rust-version.workspace = true
edition.workspace = true

[dependencies]
config = { version = "0.14.1", default-features = false, features = [
  "toml",
  "convert-case",
] }
regex = "1.11"
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0"
typed-builder = "0.19.1"

[dev-dependencies]
tokio = { version = "1.41", features = ["rt", "macros"] }
tempfile = "3.13"
temp-env = { version = "0.3.6", features = ["async_closure"] }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
