[package]
name = "leptos_config"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "Configuration for the Leptos web framework."
readme = "../README.md"
version = "0.8.7"
rust-version.workspace = true
edition.workspace = true

[dependencies]
config = { default-features = false, features = [
  "toml",
  "convert-case",
], workspace = true }
regex = { workspace = true, default-features = true }
serde = { features = [
  "derive",
  "rc",
], workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
typed-builder = { workspace = true, default-features = true }

[dev-dependencies]
tokio = { features = [
  "rt",
  "macros",
], workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }
temp-env = { features = [
  "async_closure",
], workspace = true, default-features = true }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(leptos_debuginfo)'] }
