[package]
name = "leptos_core"
version = "0.0.1"
edition = "2021"

[dependencies]
leptos_dom = { path = "../leptos_dom" }
leptos_macro = { path = "../leptos_macro" }
leptos_reactive = { path = "../leptos_reactive" }
log = "0.4"

[features]
csr = ["leptos_dom/csr", "leptos_macro/csr", "leptos_reactive/csr"]
hydrate = ["leptos_dom/hydrate", "leptos_macro/hydrate", "leptos_reactive/hydrate"]
ssr = ["leptos_dom/ssr", "leptos_macro/ssr", "leptos_reactive/ssr"]
transition = ["leptos_reactive/transition"]