[package]
name = "leptos_core"
version = "0.0.6"
edition = "2021"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/gbj/leptos"
description = "Core functionality for the Leptos web framework."

[dependencies]
ahash = "0.7"
leptos_dom = { path = "../leptos_dom", version = "0.0.4" }
leptos_macro = { path = "../leptos_macro", version = "0.0.4" }
leptos_reactive = { path = "../leptos_reactive", version = "0.0.5" }
log = "0.4"

[features]
csr = ["leptos_dom/csr", "leptos_macro/csr", "leptos_reactive/csr"]
hydrate = ["leptos_dom/hydrate", "leptos_macro/hydrate", "leptos_reactive/hydrate"]
ssr = ["leptos_dom/ssr", "leptos_macro/ssr", "leptos_reactive/ssr"]
transition = ["leptos_reactive/transition"]