[package]
name = "leptos_core"
version = "0.0.13"
edition = "2021"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/gbj/leptos"
description = "Core functionality for the Leptos web framework."

[dependencies]
leptos_dom = { path = "../leptos_dom", default-features = false, version = "0.0.12" }
leptos_macro = { path = "../leptos_macro", default-features = false, version = "0.0.13" }
leptos_reactive = { path = "../leptos_reactive", default-features = false, version = "0.0.12" }
log = "0.4"

[features]
csr = ["leptos_dom/csr", "leptos_macro/csr", "leptos_reactive/csr"]
hydrate = [
	"leptos_dom/hydrate",
	"leptos_macro/hydrate",
	"leptos_reactive/hydrate",
]
ssr = ["leptos_dom/ssr", "leptos_macro/ssr", "leptos_reactive/ssr"]
stable = ["leptos_dom/stable", "leptos_macro/stable", "leptos_reactive/stable"]

[package.metadata.cargo-all-features]
denylist = ["stable"]
