[package]
name = "leptos_debugger"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
leptos_reactive = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
nightly = []
