[package]
name = "leptos_dom"
version = { workspace = true }
edition = "2021"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "DOM operations for the Leptos web framework."
rust-version.workspace = true

[dependencies]
tachys = { workspace = true }
reactive_graph = { workspace = true }
or_poisoned = { workspace = true }
js-sys = "0.3"
send_wrapper = "0.6"
tracing = "0.1"
wasm-bindgen = "0.2"

[dev-dependencies]
leptos = { path = "../leptos" }

[dependencies.web-sys]
version = "0.3"
features = ["Location"]

[features]
default = []
tracing = []

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
