[package]
name = "leptos_dom"
version = { workspace = true }
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "DOM operations for the Leptos web framework."
rust-version.workspace = true
edition.workspace = true

[dependencies]
tachys = { workspace = true }
reactive_graph = { workspace = true }
or_poisoned = { workspace = true }
js-sys = "0.3.74"
send_wrapper = "0.6.0"
tracing = { version = "0.1.41", optional = true }
wasm-bindgen = { workspace = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
leptos = { path = "../leptos" }

[dependencies.web-sys]
version = "0.3.72"
features = ["Location"]

[features]
default = []
tracing = ["dep:tracing"]
trace-component-props = ["dep:serde", "dep:serde_json"]
hydration = ["reactive_graph/hydration"]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.cargo-all-features]
denylist = ["tracing"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(leptos_debuginfo)'] }
