[package]
name = "leptos_dom"
version = "0.8.6"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "DOM operations for the Leptos web framework."
rust-version.workspace = true
edition.workspace = true

[dependencies]
tachys = { workspace = true }
reactive_graph = { workspace = true }
or_poisoned = { workspace = true }
js-sys = { workspace = true, default-features = true }
send_wrapper = { workspace = true, default-features = true }
tracing = { optional = true, workspace = true, default-features = true }
wasm-bindgen = { workspace = true, default-features = true }
serde_json = { optional = true, workspace = true, default-features = true }
serde = { optional = true, workspace = true, default-features = true }

[dev-dependencies]
leptos = { path = "../leptos" }

[dependencies.web-sys]
features = ["Location"]
workspace = true
default-features = true

[features]
default = []
tracing = ["dep:tracing"]
trace-component-props = ["dep:serde", "dep:serde_json"]
hydration = ["reactive_graph/hydration"]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.cargo-all-features]
denylist = ["tracing"]
max_combination_size = 2

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(leptos_debuginfo)'] }
