[package]
name = "leptos_hot_reload"
version = "0.8.5"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "Utility types used for dev mode and hot-reloading for the Leptos web framework."
readme = "../README.md"
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
serde = { features = ["derive"], workspace = true, default-features = true }
syn = { features = [
  "full",
  "parsing",
  "extra-traits",
  "visit",
  "printing",
], workspace = true, default-features = true }
quote = { workspace = true, default-features = true }
rstml = { workspace = true, default-features = true }
proc-macro2 = { features = [
  "span-locations",
  "nightly",
], workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
walkdir = { workspace = true, default-features = true }
camino = { workspace = true, default-features = true }
indexmap = { workspace = true, default-features = true }
