[package]
name = "leptos_init"
version = "0.1.0"
edition = "2021"
description = "Enhanced project initialization for Leptos framework"
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = true }
tempfile = { workspace = true }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "leptos_init"
path = "src/lib.rs"

[[bin]]
name = "leptos-init"
path = "src/bin/leptos-init.rs"