[package]
name = "leptos_mode_cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Leptos mode detection and migration"
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"

[lib]
name = "leptos_mode_cli"
path = "src/lib.rs"

[[bin]]
name = "leptos-mode"
path = "src/main.rs"

[dependencies]
leptos_feature_detection = { path = "../leptos_feature_detection" }
leptos_mode_resolver = { path = "../leptos_mode_resolver" }
leptos_compile_validator = { path = "../leptos_compile_validator" }
clap = { version = "4.0", features = ["derive", "color"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
serde_yaml = "0.9"
