[package]
name = "leptos_mode_resolver"
version = "0.1.0"
edition = "2021"
description = "Smart mode-based feature resolution for Leptos framework"
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true, default-features = true }