[package]
name = "leptos_performance_optimizations"
version = "0.1.0"
edition = "2021"
description = "Performance optimizations for Leptos reactive system"
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"

[dependencies]
smallvec = "1.11"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "reactive_performance"
harness = false