[package]
name = "leptos_reactive"
version = { workspace = true }
edition = "2021"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "Reactive system for the Leptos web framework."

[dependencies]
slotmap = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-lite = { version = "0.3", optional = true }
futures = { version = "0.3" }
js-sys = "0.3"
miniserde = { version = "0.1", optional = true }
rkyv = { version = "0.7.39", features = [
  "validation",
  "uuid",
  "copy",
  "strict",
], optional = true }
bytecheck = { version = "0.7", features = [
  "uuid",
  "simdutf8",
], optional = true }
rustc-hash = "1"
serde-wasm-bindgen = "0.5"
serde_json = "1"
base64 = "0.21"
thiserror = "1"
tokio = { version = "1", features = ["rt"], optional = true }
tracing = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "DocumentFragment",
  "Element",
  "HtmlTemplateElement",
  "NodeList",
  "Window",
] }
cfg-if = "1.0.0"
indexmap = "1.9.2"

[dev-dependencies]
log = "0.4"
tokio-test = "0.4"
leptos = { path = "../leptos" }

[features]
default = []
csr = []
hydrate = []
ssr = ["dep:tokio"]
stable = []
serde = []
serde-lite = ["dep:serde-lite"]
miniserde = ["dep:miniserde"]
rkyv = ["dep:rkyv", "dep:bytecheck"]

[package.metadata.cargo-all-features]
denylist = ["stable"]
skip_feature_sets = [
  [
    "csr",
    "ssr",
  ],
  [
    "csr",
    "hydrate",
  ],
  [
    "ssr",
    "hydrate",
  ],
  [
    "serde",
    "serde-lite",
  ],
  [
    "serde-lite",
    "miniserde",
  ],
  [
    "serde",
    "miniserde",
  ],
  [
    "serde",
    "rkyv",
  ],
  [
    "miniserde",
    "rkyv",
  ],
  [
    "serde-lite",
    "rkyv",
  ],
]
